--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^8.5",
+    "donatj/mock-webserver": "^2.4"
   },
   "autoload-dev": {
     "psr-4": {
